# u-freecam

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  README.zh-CN.md  flake.nix
.github/workflows/: build.yaml
cmake/: build.cmake  xDL.cmake
cmake/profile/: debug.cmake  release.cmake
include/: UnityResolve.hpp  bootstrap.hpp  core.hpp  debug.hpp  freecam.hpp  main.hpp  unity_side.hpp  utils.hpp
include/debug/: crash_handler.hpp  logger.hpp  test.hpp
include/feature/: free_camera.hpp
include/freecam/: UnityResolve.hpp  camera_proxy.hpp  core.hpp  cursor_proxy.hpp  freecam.hpp  helper.hpp  module.hpp
include/freecam/debug/: crash_handler.hpp
include/freecam/feature/: free_camera.hpp
include/freecam/memory/: scanner.hpp
include/freecam/platform/: android.cpp  android.hpp
include/freecam/proxy/: touch_screen.hpp  transform.hpp
include/freecam/utype/unity_engine/: animation.hpp  core.hpp  input.hpp  physics.hpp
include/memory/: hook.hpp  memory.hpp  scanner.hpp
include/platform/: android.hpp
include/proxy/: camera.hpp  cursor.hpp  time.hpp  transform.hpp
include/umod/: UnityResolve.hpp  bootstrap.hpp  core.hpp  feature.hpp
include/umod/debug/: crash_handler.hpp  logger.hpp  test.hpp
include/umod/memory/: hook.hpp  scanner.hpp
include/umod/platform/: android.cpp  android.hpp  android_old.hpp
include/umod/proxy/: camera.hpp  time.hpp
include/umod/runtime/: UnityResolve.hpp
include/umod/runtime/helper/: camera.hpp  cursor.hpp  helper.hpp  input.hpp  time.hpp  touch_screen.hpp  transform.hpp
include/umod/utils/: container.hpp  event.hpp  hook_registry.hpp  math.hpp
include/umod/utype/: utype.hpp
include/umod/utype/unity_engine/: animation.hpp  core.hpp  cursor.hpp  input.hpp  legacy_input.hpp  physics.hpp  time.hpp  ui.hpp
include/user/: config.hpp
include/utype/: animation.hpp  camera.hpp  core.hpp  cursor.hpp  input.hpp  physics.hpp  quaternion.hpp  time.hpp  transform.hpp  utype.hpp
include/utype/unity_engine/: core.hpp  cursor.hpp  input.hpp  physics.hpp  time.hpp
scripts/: camera.yaml  gen.py  input.yaml  klass.hpp.j2
scripts/definitions/: camera.yaml  cursor.yaml  input.yaml  time.yaml  touch_screen.yaml
src/: CMakeLists.txt  bootstrap.cpp  camera_proxy.cpp  core.cpp  cursor_proxy.cpp  freecam.cpp  lib.cpp  main.cpp
src/feature/: free_camera.cpp
src/free_camera/: attach_mode.cpp  core.cpp  helper.cpp  movement.cpp  rotate.cpp  zoom.cpp
src/freecam/: attach_mode.cpp  core.cpp  helper.cpp  module.cpp  movement.cpp
src/freecam/core/: attach_mode.cpp  core.cpp  movement.cpp  rotate.cpp  zoom.cpp
src/proxy/: camera.cpp  cursor.cpp  transform.cpp
src/umod/: bootstrap.cpp  core.cpp
src/umod/bootstrap/: loader.cpp
src/umod/core/: core.cpp  player_loop.cpp
src/umod/helper/: camera.cpp  cursor.cpp  input.cpp  time.cpp  touch_screen.cpp  transform.cpp
src/umod/memory/: hook.cpp
webui/: .prettierrc  CMakeLists.txt  config.cpp  config.hpp  json.cpp  json.hpp  meta.cpp  meta.json  page.inc  schema.cpp  schema.inc  schema.json  webui.cpp  webui.hpp  webui.html  webui.new.html
